// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrNodeComponentDirective ngOnChanges should render a mapped component 1`] = `
<div
  id="root7"
>
  
  <br-component-test>
    <span>
      Component: something
    </span>
    <span>
      Page: Some Page
    </span>
  </br-component-test>
</div>
`;

exports[`BrNodeComponentDirective ngOnChanges should render a node template 1`] = `
<div
  id="root1"
>
  
  <span
    class="head"
  >
    Implicit: something
  </span>
  <span>
    Component: something
  </span>
  <span
    class="tail"
  >
    Page: Some Page
  </span>
</div>
`;

exports[`BrNodeComponentDirective ngOnChanges should render children when there is no mapping 1`] = `
<div
  id="root3"
>
  
  <span
    class="head"
  >
    Implicit: child1
  </span>
  <span>
    Component: child1
  </span>
  <span
    class="tail"
  >
    Page: Some Page
  </span>
  <span
    class="head"
  >
    Implicit: child2
  </span>
  <span>
    Component: child2
  </span>
  <span
    class="tail"
  >
    Page: Some Page
  </span>
</div>
`;

exports[`BrNodeComponentDirective ngOnDestroy should clear the container 1`] = `
<div
  id="root9"
>
  
</div>
`;
